# pylak

./: README.md  __pseudorandomdata__.txt  pyproject.toml
src/pylak/: __init__.py  animation.py  asset.py  camera.py  collider.py  engine.py  fileloader.py  main.py  physics.py  player.py  refs.py  robot.py  start.py  tile.py  visual.py
src/pylak/game/: adventure.py
src/pylak/games/: __init__.py  maze.py
tests/: animation.py  assets.py  collider.py  game.py  maze.py  maze_full.py  physics.py  robot.py
tests/exercises/: mechanics.py  test.py
